refactor(app): migrate from Create React App to Vite with Tailwind CSS
Major refactoring of the entire portfolio application:
- Migrated build system from Create React App to Vite for faster development and builds
- Replaced styled-components and custom CSS with Tailwind CSS v4 for improved styling workflow
- Updated all components from class components to functional components with hooks
- Switched from FontAwesome to Lucide React for icons
- Added dark mode support with theme toggle functionality
- Implemented smooth animations using Framer Motion
- Restructured project layout and file organization
- Updated dependencies to latest versions (React 19, TypeScript, etc.)
- Removed outdated files and configurations from previous setup
- Enhanced responsive design and mobile experience

--- a/package.json
+++ b/package.json
@@ -1,62 +1,30 @@
 {
-	"homepage": "https://kazuno0101.github.io/",
-	"name": "Kazuno's Portfolio",
-	"version": "1.1.0",
-	"description": "Personal portfolio template built using Reactjs",
-	"author": {
-		"name": "Nuno Alwi",
-		"email": "kazunonuno@gamil.com",
-		"url": "https://kazuno0101.github.io/"
-	},
-	"license": "MIT",
-	"private": true,
-	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^6.4.0",
-		"@fortawesome/free-brands-svg-icons": "^6.4.0",
-		"@fortawesome/free-regular-svg-icons": "^6.4.0",
-		"@fortawesome/free-solid-svg-icons": "^6.4.0",
-		"@fortawesome/react-fontawesome": "^0.2.0",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@testing-library/user-event": "^13.5.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.11.1",
-		"react-scripts": "5.0.1",
-		"styled-components": "^5.3.10",
-		"web-vitals": "^2.1.4"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"prettier": {
-		"useTabs": true,
-		"tabWidth": 4
-	},
-	"devDependencies": {
-		"gh-pages": "^5.0.0"
-	}
+  "name": "portfolio",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
+    "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "~5.9.3",
+    "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.27.5",
+    "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.12.0",
+    "tailwind-merge": "^3.4.0"
+  }
 }
