--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "vite": "^7.2.4"
   },
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.49",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.27.5",
+    "fullpage.js": "^4.0.40",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
